--- a/Webpage/wp.html
+++ b/Webpage/wp.html
@@ -3,9 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DGA1020</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="left-fixed-bar">
+        <img src="logo.png" alt="Logo" style="width: 100px; margin-bottom: 30px;" />
+        <div style="display: flex; flex-direction: column; gap: 10px; margin-bottom: auto;">
+            <div>HOME</div>
+            <div>FILMS</div>
+          
+        </div>
+        <div style="margin-top:auto;">INSTAGRAM</div>
+    </div>
+    <div class="header-row" style="display: flex; align-items: center; justify-content: space-between; margin-left:220px; margin-top:30px;">
+        <h1 class="header-title" style="text-align:left; font-size:60px; margin: 0;">DGA1020</h1>
+        <span class="header-year" style="font-size:28px; margin-right:40px;">2025</span>
+    </div>
+    <h2 class="section-title">Film making & Video editing</h2>
+    <div style="display: flex; margin-left:220px; align-items: flex-start;">
+        <div style="width:500px;">
+            <div>
+                <p style="text-align:left; font-size:1.2em;">
+                    This project centers around the creative use of filmmaking and video editing to reimagine still life through motion, light, and sound. At its core, it explores how static compositions—traditionally associated with painting or photography—can be brought to life through cinematic techniques. The focus is on constructing a visual narrative using inanimate and animate objects, and capturing their transformation over time using carefully controlled lighting and camera techniques.
+                </p>
+            </div>
+            <div>
+                <p style="text-align:left; font-size:1.2em;">
+                    The process begins with the design of a still life composition, featuring a range of materials that challenge the camera and the editor alike. Reflective and translucent surfaces such as glass, polished metal, and mirrors are combined with organic elements like fruits or vegetables, chosen for their gloss and texture. An animate object—such as a ticking clock, a flowing water feature, or a small motorized toy—is added to introduce subtle, continuous movement, acting as a visual anchor within the otherwise motionless scene.
+                </p>
+            </div>
+            <div>
+                <p style="text-align:left; font-size:1.2em;">
+                    Filming is conducted in FullHD 1080p resolution at either 24 or 25 frames per second, ensuring professional image quality. The camera is kept static during the initial time-lapse recording, which captures the scene’s gradual transformation from an empty space into a fully assembled and atmospherically lit composition. The lighting is introduced in stages—from total darkness to ambient glow to full cinematic illumination—showcasing how light shapes the mood, form, and perception of everyday objects.
+                </p>
+            </div>
+            <div>
+                <p style="text-align:left; font-size:1.2em;">
+                    Special care is taken to achieve audiovisual coherence. The camera’s focus, white balance, and exposure settings are manually controlled to avoid grainy footage or overexposure. A slow shutter speed is used where appropriate to create motion blur, especially to highlight the presence and movement of the animate object. Additional visual techniques, such as rim lighting, specular highlights, and diffused shadows, are employed to draw attention to material qualities and surface detail, enhancing visual depth and engagement.
+                </p>
+            </div>
+            <div>
+                <p style="text-align:left; font-size:1.2em;">
+                    The editing phase is split into two separate creative challenges. The first is a 30-second themed edit that follows a structured narrative arc: from blank canvas, through the lighting transition, to a final, optimized still life presentation. This version uses only static shots, reinforcing the concept of 'moving stillness' while emphasizing visual details such as reflections, refractions, and material textures. Sound effects are carefully layered to match on-screen visuals, enhancing immersion and helping to convey mood without relying on dialogue or music beds alone.
+                </p>
+            </div>
+            <div>
+                <p style="text-align:left; font-size:1.2em;">
+                    The second edit, known as #theedit, allows for complete creative freedom. It reuses the original footage but reshapes it into a more vibrant, expressive 30-second sequence. This version may include dynamic cuts, different angles, and non-linear storytelling. A completely new and contrasting audio base is selected to explore how sound can redefine the tone and emotional impact of the same visual material. This edit encourages experimentation with rhythm, pacing, and reinterpretation, showing how the same raw footage can be transformed into a new visual experience.
+                </p>
+            </div>
+            <div>
+                <p style="text-align:left; font-size:1.2em;">
+                    Overall, this project showcases the intersection of technical skill and artistic vision in filmmaking. It demonstrates how light, composition, camera technique, editing, and sound can work together to elevate ordinary objects into compelling visual narratives. The final outcome is not only a series of short films, but also a study in how perception is shaped by cinematic language, revealing the potential of video editing to create meaning, emotion, and aesthetic impact from even the most static sources.
+                </p>
+            </div>
+        </div>
+        <div style="flex:1; display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 600px;">
+            <img src="webphotos.png" alt="Project process collage" style="width:676px; border-radius:10px; display:block;" />
+        </div>
+    </div>
 </body>
 </html>
