--- a/Webpage/wp.html
+++ b/Webpage/wp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DGA1020</title>
+    <title>CW4</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="top">
@@ -11,8 +11,7 @@
         <img src="logo.png" alt="Logo" style="width: 100px; margin-bottom: 30px;" />
         <div style="display: flex; flex-direction: column; gap: 10px; margin-bottom: auto;">
             <a href="#top" class="home-link">HOME</a>
-            <div>FILMS</div>
-          
+            <a href="#films" class="films-link">VIDEOS</a>
         </div>
         <div style="margin-top:auto;">
             <a href="https://www.instagram.com/ummalta/" target="_blank" style="color: #fff; text-decoration: none;">INSTAGRAM</a>
@@ -62,21 +61,21 @@
        
         </div> <!-- This closes the flex container with text and image -->
     </div>
-    <div style="margin-left:220px; margin-top: 60px; display: flex; flex-direction: column; gap: 40px; align-items: center;">
-        <div style="display: flex; align-items: center; width: 700px;">
-            <video width="550" controls>
+    <div id="films" style="margin-left:220px; margin-top: 60px; display: flex; flex-direction: column; gap: 40px; align-items: center;">
+        <div style="display: flex; align-items: center; width: 950px;">
+            <video width="800" controls>
                 <source src="vid1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <span style="min-width: 120px; text-align: left; margin-left: 24px; font-size: 1.2em; font-family: 'Barlow Condensed', sans-serif; color: rgb(113, 13, 25); font-weight: 700;">
+            <span style="min-width: 180px; text-align: left; margin-left: 32px; font-size: 2em; font-family: 'Barlow Condensed', sans-serif; color: rgb(113, 13, 25); font-weight: 700;">
                 Themed Edit
             </span>
         </div>
-        <div style="display: flex; align-items: center; width: 700px;">
-            <span style="min-width: 120px; text-align: right; margin-right: 24px; font-size: 1.2em; font-family: 'Barlow Condensed', sans-serif; color: rgb(113, 13, 25); font-weight: 700;">
+        <div style="display: flex; align-items: center; width: 950px;">
+            <span style="min-width: 180px; text-align: right; margin-right: 32px; font-size: 2em; font-family: 'Barlow Condensed', sans-serif; color: rgb(113, 13, 25); font-weight: 700;">
                 #theedit
             </span>
-            <video width="550" controls>
+            <video width="800" controls>
                 <source src="vid2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
