--- a/Webpage/wp.html
+++ b/Webpage/wp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> s
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,7 +59,7 @@
         <div style="flex:1; display: flex; flex-direction: column; align-items: center; justify-content: flex-end; min-height: 600px; padding-top: 70px;">
             <img src="pphotos.png" alt="Project process collage" style="width:703px; border-radius:10px; display:block;" />
        
-        </div> <!-- This closes the flex container with text and image -->
+        </div> 
     </div>
     <div id="films" style="margin-left:220px; margin-top: 60px; display: flex; flex-direction: column; gap: 40px; align-items: center;">
         <div style="display: flex; align-items: center; width: 950px;">
